[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynacir"
version = "0.1.0"
authors = [{name = "Derek Wang", email = "derek.wang@ibm.com"}]
description = "A Qiskit transpilation plugin for `dyna`mic `cir`cuits."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["qiskit", "quantum", "plugin"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/SHWACODING/dynacir"

[project.dynamic]  # Add this section
requires_python = ">=3.6"  # Specify required Python version here

[project.entry-points."qiskit.transpiler.optimization"]
"dynacir" = "dynacir.dynacir_plugin:DynacirPlugin"
